@@ -13,8 +13,12 @@ base-installer (1.83) UNRELEASED; urgency=low
     to skip installing a kernel is supported.
   * If we could not determine any reasonable default kernel, ask the question
     at critical priority.
+  * Sort the kernel list in ascending order. With the improved method of
+    selecting a default and the fact that we no longer have different kernel
+    major versions, reverse sorting is no longer as important, especially as
+    using a descending order has its own disadvantages.
 
- -- Frans Pop <fjp@debian.org>  Fri, 20 Jul 2007 07:42:05 +0200
+ -- Frans Pop <fjp@debian.org>  Fri, 20 Jul 2007 08:23:44 +0200
 
 base-installer (1.82) unstable; urgency=low
 
